# struck

./: .gitignore  CMakeLists.txt  Makefile  README.md  README.txt  struck.sln  struck.vcproj
cmake/: FindEigen.cmake
src/: Features.h  ImageRep.cpp  ImageRep.h  Kernels.h  LaRank.cpp  LaRank.h  RawFeatures.h  Sampler.cpp  Tracker.cpp  Tracker.h  main.cpp  trax.cpp
src/GraphUtils/: GraphUtils.cpp  GraphUtils.h
